--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@applitools/eyes-storybook": "^3.12.1",
+    "@storybook/components": "^6.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -15,6 +16,7 @@
     "@storybook/addon-links": "^6.1.9",
     "@storybook/react": "^6.1.9",
     "babel-loader": "^8.2.2",
+    "circular-dependency-plugin": "^5.2.2",
     "dotenv": "^8.2.0"
   },
   "scripts": {
